<resources>
    <string name="app_name">CryptoCurrencies</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Цена: </string>
    <string name="min_price_label">Минимум за день:</string>
    <string name="max_price_label">Максимум за день:</string>
    <string name="last_bargain_label">Последняя сделка:</string>
    <string name="update_label">Обновлено:</string>
</resources>