<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.CoinDetailsActivity">

    <ImageView
        android:id="@+id/ivCoinLogoInDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />


    <TextView
        android:id="@+id/tvFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogoInDetails"
        tools:text="BTC" />

    <TextView
        android:id="@+id/tvSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slash"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="#000"
        android:textSize="24sp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogoInDetails" />

    <TextView
        android:id="@+id/tvToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tvSlash"
        app:layout_constraintTop_toBottomOf="@+id/ivCoinLogoInDetails"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">


            <TextView
                android:id="@+id/tvPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                style="@style/DetailsTextTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsTextTheme"
                app:layout_constraintStart_toEndOf="@+id/tvPriceLabel"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="8333.54"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tvPriceLabel" />

            <TextView
                android:id="@+id/tvMinPriceLabel"
                style="@style/DetailsTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/min_price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/tvMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsTextTheme"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintStart_toEndOf="@+id/tvMinPriceLabel"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:text="7843.34"/>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tvMinPriceLabel" />


            <TextView
                android:id="@+id/tvMaxPriceLabel"
                style="@style/DetailsTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/max_price_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/tvMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                style="@style/DetailsTextTheme"
                app:layout_constraintStart_toEndOf="@+id/tvMaxPriceLabel"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="8843.34"/>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvLastBargainLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                style="@style/DetailsTextTheme"
                android:text="@string/last_bargain_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <TextView
                android:id="@+id/tvLastBargain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsTextTheme"
                app:layout_constraintStart_toEndOf="@+id/tvLastBargainLabel"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                tools:text="Kraken"/>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tvMaxPriceLabel" />

            <TextView
                android:id="@+id/tvUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                style="@style/DetailsTextTheme"
                android:text="@string/update_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view5" />

            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailsTextTheme"
                app:layout_constraintStart_toEndOf="@+id/tvUpdateLabel"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                tools:text="10:35:34"/>

            <View
                android:id="@+id/view5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tvLastBargainLabel" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>